--- a/styles.css
+++ b/styles.css
@@ -45,12 +45,7 @@ body {
     grid-column-gap: 1/3;   
 }
 /*Large Mobile Display (Iphone Plus, Pixel XL, Samsung Note, etc.*/
-@media screen and (min-width: 450px){
-    .wrapper{
-        display: grid;
-        /*grid-template-columns: 1fr 14fr; */
-        grid-gap: 1em;
-    }
+@media screen and (max-width: 768px){
     .middlepanel {
         display: grid;
         grid-template-columns: 3fr 3fr;
