--- a/styles.css
+++ b/styles.css
@@ -40,12 +40,19 @@ body {
     margin:0 auto;
 }
 
+.chartContainer {
+    width: 50vw;
+    height: 40vh;
+    position: relative;
+    margin:0 auto;
+}
+
 .leftpanel {
     box-shadow: 0 1px 3px 0 rgba(60, 64, 67, 0.3), 0 4px 8px 3px rgba(60, 64, 67, 0.15);
     grid-column-gap: 1/3;   
 }
 /*Large Mobile Display (Iphone Plus, Pixel XL, Samsung Note, etc.*/
-@media screen and (max-width: 768px){
+@media screen and (min-width: 450px){
     .middlepanel {
         display: grid;
         grid-template-columns: 3fr 3fr;
